@@ -1,21 +1,35 @@
 package com.example.hotelsmartbookingbackend.service.impl;
 
+import com.example.hotelsmartbookingbackend.dto.request.BookingFilter;
+import com.example.hotelsmartbookingbackend.dto.request.CancelBookingRequest;
 import com.example.hotelsmartbookingbackend.dto.request.CreateBookingRequest;
 import com.example.hotelsmartbookingbackend.dto.request.CreateGroupBookingRequest;
-import com.example.hotelsmartbookingbackend.dto.request.BookingFilter;
-import com.example.hotelsmartbookingbackend.dto.request.UpdateBookingRequest;
-import com.example.hotelsmartbookingbackend.dto.request.CancelBookingRequest;
+import com.example.hotelsmartbookingbackend.dto.request.WalkInBookingRequest;
+import com.example.hotelsmartbookingbackend.dto.request.AddServiceRequest;
 import com.example.hotelsmartbookingbackend.dto.response.AiFaceVerificationResponse;
 import com.example.hotelsmartbookingbackend.dto.response.BookingHistoryResponse;
 import com.example.hotelsmartbookingbackend.dto.response.BookingResponse;
+import com.example.hotelsmartbookingbackend.dto.response.InvoiceResponse;
+import com.example.hotelsmartbookingbackend.dto.request.UpdateBookingRequest;
+import com.example.hotelsmartbookingbackend.dto.response.AiFaceReadinessResponse;
+import com.example.hotelsmartbookingbackend.dto.response.AiFaceVerificationResponse;
+import com.example.hotelsmartbookingbackend.dto.response.BookingHistoryResponse;
+import com.example.hotelsmartbookingbackend.dto.response.BookingResponse;
+import com.example.hotelsmartbookingbackend.dto.response.EkycIdentitySummaryResponse;
 import com.example.hotelsmartbookingbackend.dto.response.PageResponse;
+import com.example.hotelsmartbookingbackend.dto.response.QrTokenResponse;
 import com.example.hotelsmartbookingbackend.dto.response.RoomAccessResponse;
+
 import com.example.hotelsmartbookingbackend.entity.Booking;
 import com.example.hotelsmartbookingbackend.entity.BookingRoomAccess;
 import com.example.hotelsmartbookingbackend.entity.Bookingdetail;
 import com.example.hotelsmartbookingbackend.entity.Room;
 import com.example.hotelsmartbookingbackend.entity.Roomtype;
 import com.example.hotelsmartbookingbackend.entity.User;
+import com.example.hotelsmartbookingbackend.entity.Payment;
+import com.example.hotelsmartbookingbackend.entity.Bookingservice;
+import com.example.hotelsmartbookingbackend.enums.Role;
+
 import com.example.hotelsmartbookingbackend.repository.BookingRepository;
 import com.example.hotelsmartbookingbackend.repository.BookingRoomAccessRepository;
 import com.example.hotelsmartbookingbackend.repository.BookingdetailRepository;
@@ -24,9 +38,21 @@ import com.example.hotelsmartbookingbackend.repository.FaceembeddingRepository;
 import com.example.hotelsmartbookingbackend.repository.RoomRepository;
 import com.example.hotelsmartbookingbackend.repository.RoomtypeRepository;
 import com.example.hotelsmartbookingbackend.repository.UserRepository;
+import com.example.hotelsmartbookingbackend.repository.PaymentRepository;
+import com.example.hotelsmartbookingbackend.repository.BookingserviceRepository;
+import com.example.hotelsmartbookingbackend.repository.ServiceRepository;
 import com.example.hotelsmartbookingbackend.service.BookingService;
+import com.example.hotelsmartbookingbackend.service.EmailService;
+import com.example.hotelsmartbookingbackend.service.WebSocketService;
+
+import com.example.hotelsmartbookingbackend.service.BookingService;
+import com.example.hotelsmartbookingbackend.service.SupabaseStorageService;
+
 import com.example.hotelsmartbookingbackend.specification.BookingSpecification;
+
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.data.domain.Page;
@@ -43,15 +69,18 @@ import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.util.UUID;
 import java.security.SecureRandom;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.ZoneId;
-import java.time.temporal.ChronoUnit;
 import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -60,6 +89,7 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class BookingServiceImpl implements BookingService {
 
     private static final ZoneId HOTEL_ZONE = ZoneId.of("Asia/Bangkok");
@@ -73,9 +103,10 @@ public class BookingServiceImpl implements BookingService {
     private static final String ROOM_KEY_STATUS_EXPIRED = "Expired";
     private static final String ROOM_STATUS_OCCUPIED = "Occupied";
     private static final int DEFAULT_SINGLE_BOOKING_QUANTITY = 1;
+    private static final int QR_TOKEN_RANDOM_BYTES = 32;
     private static final SecureRandom SECURE_RANDOM = new SecureRandom();
-    private static final List<String> INVENTORY_HOLDING_BOOKING_STATUSES =
-            List.of("Pending", "Confirmed", "Checked In");
+    private static final List<String> INVENTORY_HOLDING_BOOKING_STATUSES = List.of("Pending", "Confirmed",
+            "Checked In");
     private static final List<String> INVENTORY_HOLDING_DETAIL_STATUSES = List.of("Active");
     private static final DateTimeFormatter BOOKING_REFERENCE_TIME_FORMAT = DateTimeFormatter.ofPattern("yyyyMMddHHmmss")
             .withZone(HOTEL_ZONE);
@@ -89,10 +120,23 @@ public class BookingServiceImpl implements BookingService {
     private final UserRepository userRepository;
     private final EkycProfileRepository ekycProfileRepository;
     private final FaceembeddingRepository faceembeddingRepository;
+    private final AesEncryptionService aesEncryptionService;
+    private final SupabaseStorageService supabaseStorageService;
     private final WebClient webClient;
+    private final PaymentRepository paymentRepository;
+    private final BookingserviceRepository bookingserviceRepository;
+    private final WebSocketService webSocketService;
+    private final ServiceRepository serviceRepository;
+    private final EmailService emailService;
 
     @Value("${ai.service.face-verify-url:http://localhost:8000/api/v1/face/verify}")
     private String aiFaceVerifyUrl;
+
+    @Value("${ai.service.face-readiness-url:http://localhost:8000/api/v1/face/check-readiness}")
+    private String aiFaceReadinessUrl;
+
+    @Value("${booking.qr-token-ttl-minutes:15}")
+    private long qrTokenTtlMinutes;
 
     @Override
     @Transactional
@@ -146,6 +190,28 @@ public class BookingServiceImpl implements BookingService {
         User customer = userRepository.findByEmail(customerEmail)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
 
+        String normalizedCheckInMethod = normalizeCheckInMethod(checkInMethod);
+        if (isFaceIdMethod(normalizedCheckInMethod)) {
+            validateFaceIdBookingEligibility(customer);
+        }
+        if (isQrCodeMethod(normalizedCheckInMethod)) {
+            validateQrCodeBookingEligibility(customer);
+        }
+        if ("FaceID".equalsIgnoreCase(normalizedCheckInMethod)) {
+            boolean ekycVerified = ekycProfileRepository.existsByUseridAndStatus(
+                    customer,
+                    "Verified");
+            boolean faceRegistered = faceembeddingRepository
+                    .findEmbeddingTextByUserId(customer.getId())
+                    .filter(embedding -> !embedding.isBlank())
+                    .isPresent();
+
+            if (!ekycVerified || !faceRegistered) {
+                throw new RuntimeException(
+                        "Bạn phải hoàn thành đăng ký eKYC và khuôn mặt trước khi chọn check-in bằng FaceID");
+            }
+        }
+
         Roomtype roomtype = roomtypeRepository.findByIdForUpdate(roomTypeId)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy loại phòng"));
 
@@ -169,7 +235,7 @@ public class BookingServiceImpl implements BookingService {
         booking.setUserid(customer);
         booking.setBookingreference(generateBookingReference(now));
         booking.setBookingtype(bookingType);
-        booking.setCheckinmethod(normalizeCheckInMethod(checkInMethod));
+        booking.setCheckinmethod(normalizedCheckInMethod);
         booking.setTotalamount(totalAmount);
         booking.setPaidamount(BigDecimal.ZERO);
         booking.setDepositamount(BigDecimal.ZERO);
@@ -354,14 +420,80 @@ public class BookingServiceImpl implements BookingService {
                 .roomKeyGeneratedAt(detail.getRoomkeygeneratedat())
                 .roomKeyExpiresAt(detail.getRoomkeyexpiredat())
                 .roomAccesses(roomAccesses)
+                .ekycIdentity(mapEkycIdentitySummary(booking.getUserid()))
                 .createdAt(booking.getCreatedat())
                 .build();
     }
 
+    private EkycIdentitySummaryResponse mapEkycIdentitySummary(User customer) {
+        if (customer == null) {
+            return null;
+        }
+
+        return ekycProfileRepository.findTopByUseridOrderByCreatedatDesc(customer)
+                .map(profile -> {
+                    String idNumber = decryptOrNull(profile.getIdcardnumber());
+                    String fullName = decryptOrNull(profile.getFullname());
+                    String dateOfBirth = decryptOrNull(profile.getDateofbirth());
+                    String gender = decryptOrNull(profile.getGender());
+                    String hometown = decryptOrNull(profile.getHometown());
+                    String provinceName = decryptOrNull(profile.getProvincename());
+
+                    return EkycIdentitySummaryResponse.builder()
+                            .status(profile.getStatus())
+                            .fullName(fullName != null ? fullName : customer.getFullname())
+                            .idNumber(maskIdNumber(idNumber))
+                            .dateOfBirth(dateOfBirth)
+                            .gender(gender)
+                            .hometown(hometown != null ? hometown : provinceName)
+                            .provinceCode(profile.getProvincecode())
+                            .provinceName(provinceName)
+                            .verifiedAt(profile.getVerifiedat())
+                            .frontImage(signedUrlOrNull(profile.getFrontimage()))
+                            .backImage(signedUrlOrNull(profile.getBackimage()))
+                            .faceImage(signedUrlOrNull(profile.getFaceimage()))
+                            .build();
+                })
+                .orElse(null);
+    }
+
+    private String decryptOrNull(String encryptedValue) {
+        if (encryptedValue == null || encryptedValue.isBlank()) {
+            return null;
+        }
+        try {
+            return aesEncryptionService.decrypt(encryptedValue);
+        } catch (Exception ignored) {
+            return null;
+        }
+    }
+
+    private String signedUrlOrNull(String pathOrUrl) {
+        if (pathOrUrl == null || pathOrUrl.isBlank()) {
+            return null;
+        }
+        try {
+            return supabaseStorageService.getSignedUrl(pathOrUrl);
+        } catch (Exception ignored) {
+            return null;
+        }
+    }
+
+    private String maskIdNumber(String idNumber) {
+        if (idNumber == null || idNumber.isBlank()) {
+            return null;
+        }
+        if (idNumber.length() <= 5) {
+            return "*".repeat(idNumber.length());
+        }
+        return idNumber.substring(0, 2)
+                + "*".repeat(Math.max(0, idNumber.length() - 5))
+                + idNumber.substring(idNumber.length() - 3);
+    }
+
     private BookingHistoryResponse mapToHistoryResponse(
             Bookingdetail detail,
-            boolean includeRoomPassword
-    ) {
+            boolean includeRoomPassword) {
         Booking booking = detail.getBookingid();
         Roomtype roomtype = detail.getRoomtypeid();
         Room assignedRoom = detail.getRoomid();
@@ -371,8 +503,7 @@ public class BookingServiceImpl implements BookingService {
         List<RoomAccessResponse> roomAccesses = mapRoomAccesses(
                 booking,
                 detail,
-                includeRoomPassword
-        );
+                includeRoomPassword);
 
         return BookingHistoryResponse.builder()
                 .bookingId(booking.getId())
@@ -398,6 +529,15 @@ public class BookingServiceImpl implements BookingService {
                 .roomKeyStatus(detail.getRoomkeystatus())
                 .roomKeyExpiresAt(detail.getRoomkeyexpiredat())
                 .roomAccesses(roomAccesses)
+                .ekycIdentity(includeRoomPassword && isFaceIdMethod(booking.getCheckinmethod())
+                        ? mapEkycIdentitySummary(booking.getUserid())
+                        : null)
+                .paidAmount(booking.getPaidamount())
+                .depositAmount(booking.getDepositamount())
+                .serviceChargeAmount(booking.getServicechargeamount())
+                .taxAmount(booking.getTaxamount())
+                .discountAmount(booking.getDiscountamount())
+                .finalAmount(booking.getFinalamount())
                 .build();
     }
 
@@ -407,14 +547,17 @@ public class BookingServiceImpl implements BookingService {
         User staff = userRepository.findByEmail(staffEmail)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
 
-        if (!"receptionist".equalsIgnoreCase(staff.getRole().name()) && !"manager".equalsIgnoreCase(staff.getRole().name())) {
+        if (!"receptionist".equalsIgnoreCase(staff.getRole().name())
+                && !"manager".equalsIgnoreCase(staff.getRole().name())) {
             throw new RuntimeException("Bạn không có quyền thực hiện chức năng này");
         }
 
         Booking booking = bookingRepository.findById(bookingId)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn đặt phòng"));
 
-        if (!"Confirmed".equalsIgnoreCase(booking.getStatus())) {
+        if (!"Confirmed".equalsIgnoreCase(booking.getStatus())
+                && !"Paid".equalsIgnoreCase(booking.getStatus())
+                && !"Partially Paid".equalsIgnoreCase(booking.getStatus())) {
             throw new RuntimeException("Đơn đặt phòng không ở trạng thái có thể nhận phòng");
         }
 
@@ -429,17 +572,22 @@ public class BookingServiceImpl implements BookingService {
     public BookingResponse performFaceCheckIn(
             Integer bookingId,
             MultipartFile selfieImage,
-            MultipartFile leftImage,
-            MultipartFile rightImage,
-            MultipartFile upImage,
-            MultipartFile downImage,
-            String actorEmail
-    ) {
+            MultipartFile challengeImage,
+            MultipartFile challengeImage2,
+            MultipartFile challengeImage3,
+            String challengeDirection,
+            String actorEmail) {
         validateSelfie(selfieImage);
-        validateSelfie(leftImage);
-        validateSelfie(rightImage);
-        validateSelfie(upImage);
-        validateSelfie(downImage);
+        validateSelfie(challengeImage);
+        validateSelfie(challengeImage2);
+        validateSelfie(challengeImage3);
+        String normalizedChallengeDirection = challengeDirection == null
+                ? ""
+                : challengeDirection.trim().toLowerCase();
+        if (!normalizedChallengeDirection.equals("left")
+                && !normalizedChallengeDirection.equals("right")) {
+            throw new RuntimeException("Hướng thử thách FaceID không hợp lệ");
+        }
 
         User actor = userRepository.findByEmail(actorEmail)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
@@ -457,14 +605,16 @@ public class BookingServiceImpl implements BookingService {
             throw new RuntimeException("Booking chưa được liên kết với tài khoản khách hàng");
         }
 
-        if (!"Confirmed".equalsIgnoreCase(booking.getStatus())) {
+        if (!"Confirmed".equalsIgnoreCase(booking.getStatus())
+                && !"Paid".equalsIgnoreCase(booking.getStatus())
+                && !"Partially Paid".equalsIgnoreCase(booking.getStatus())) {
             throw new RuntimeException("Đơn đặt phòng không ở trạng thái có thể nhận phòng");
         }
         if (!"Face Recognition".equalsIgnoreCase(booking.getCheckinmethod())
                 && !"FaceID".equalsIgnoreCase(booking.getCheckinmethod())) {
             throw new RuntimeException("Đơn đặt phòng này không sử dụng phương thức FaceID");
         }
-        validateFaceCheckInDate(detail);
+        validateCheckInDateWindow(detail);
 
         if (!ekycProfileRepository.existsByUseridAndStatus(customer, "Verified")) {
             throw new RuntimeException(
@@ -480,33 +630,167 @@ public class BookingServiceImpl implements BookingService {
         AiFaceVerificationResponse verification = callFaceVerificationService(
                 registeredEmbedding,
                 selfieImage,
-                leftImage,
-                rightImage,
-                upImage,
-                downImage
-        );
+                challengeImage,
+                challengeImage2,
+                challengeImage3,
+                normalizedChallengeDirection);
         if (!Boolean.TRUE.equals(verification.getLivenessPassed())) {
             String livenessMessage = verification.getMessage() != null
                     && !verification.getMessage().isBlank()
-                    ? verification.getMessage()
-                    : "Không vượt qua kiểm tra liveness";
-            throw new RuntimeException(
-                    livenessMessage
-                            + " Vui lòng dùng khuôn mặt thật trước camera, không dùng ảnh hoặc màn hình");
+                            ? verification.getMessage()
+                            : "Không vượt qua kiểm tra liveness";
+            if (Boolean.FALSE.equals(verification.getActiveLivenessPassed())) {
+                throw new RuntimeException(livenessMessage);
+            }
+            throw new RuntimeException(livenessMessage
+                    + " Vui lòng dùng khuôn mặt thật trước camera, không dùng ảnh hoặc màn hình");
         }
         if (!Boolean.TRUE.equals(verification.getVerified())
                 || !Boolean.TRUE.equals(verification.getMatched())) {
-            throw new RuntimeException("Khuôn mặt không khớp với hồ sơ eKYC đã đăng ký");
+            String mismatchMessage = verification.getMessage() != null
+                    && !verification.getMessage().isBlank()
+                            ? verification.getMessage()
+                            : "Check-in bị từ chối: khuôn mặt hiện tại không khớp với khuôn mặt đã đăng ký eKYC.";
+            throw new RuntimeException(mismatchMessage);
         }
 
         return completeCheckIn(booking, detail, actor);
     }
 
+    @Override
+    @Transactional
+    public QrTokenResponse generateQrCheckInToken(Integer bookingId, String customerEmail) {
+        Bookingdetail detail = bookingdetailRepository.findBookingDetail(bookingId, customerEmail)
+                .orElseThrow(() -> new RuntimeException("Khong tim thay booking QR Code cua ban"));
+        Booking booking = detail.getBookingid();
+        User customer = booking.getUserid();
+        if (customer == null) {
+            throw new RuntimeException("Booking chua duoc lien ket voi tai khoan khach hang");
+        }
+
+        validateQrBookingForCheckIn(booking, detail, customer);
+
+        Instant now = Instant.now();
+        if (hasActiveQrToken(detail, now)) {
+            String existingToken = detail.getQrcodevalue();
+            Instant existingExpiresAt = detail.getQrcodeexpiredat();
+            sendQrCheckInEmailSafely(customer, booking, detail, existingToken, existingExpiresAt);
+            return buildQrTokenResponse(booking, detail, existingToken, existingExpiresAt);
+        }
+
+        Instant expiresAt = calculateQrTokenExpiry(now, detail);
+        String token = generateUniqueQrToken();
+
+        detail.setQrcodevalue(token);
+        detail.setQrcodegeneratedat(now);
+        detail.setQrcodeexpiredat(expiresAt);
+        detail.setUpdatedat(now);
+        bookingdetailRepository.save(detail);
+
+        sendQrCheckInEmailSafely(customer, booking, detail, token, expiresAt);
+
+        return buildQrTokenResponse(booking, detail, token, expiresAt);
+    }
+
+    private QrTokenResponse buildQrTokenResponse(
+            Booking booking,
+            Bookingdetail detail,
+            String token,
+            Instant expiresAt
+    ) {
+        return QrTokenResponse.builder()
+                .bookingId(booking.getId())
+                .bookingReference(booking.getBookingreference())
+                .token(token)
+                .qrPayload(token)
+                .generatedAt(detail.getQrcodegeneratedat())
+                .expiresAt(expiresAt)
+                .build();
+    }
+
+    @Override
+    @Transactional
+    public BookingResponse performQrCheckIn(String qrToken, String actorEmail) {
+        if (qrToken == null || qrToken.isBlank()) {
+            throw new RuntimeException("Ma QR check-in khong hop le");
+        }
+
+        User actor = userRepository.findByEmail(actorEmail)
+                .orElseThrow(() -> new RuntimeException("Khong tim thay nguoi dung"));
+
+        String token = qrToken.trim();
+        Bookingdetail detail = bookingdetailRepository.findByQrcodevalueForUpdate(token)
+                .orElseThrow(() -> new RuntimeException("Ma QR check-in khong hop le hoac da het hieu luc"));
+
+        Instant now = Instant.now();
+        if (detail.getQrcodeexpiredat() == null || !now.isBefore(detail.getQrcodeexpiredat())) {
+            clearQrToken(detail, now);
+            bookingdetailRepository.save(detail);
+            throw new RuntimeException("Ma QR check-in da het hieu luc");
+        }
+
+        Booking booking = detail.getBookingid();
+        User customer = booking.getUserid();
+        if (customer == null) {
+            throw new RuntimeException("Booking chua duoc lien ket voi tai khoan khach hang");
+        }
+
+        validateQrCheckInActor(actor, customer);
+        validateQrBookingForCheckIn(booking, detail, customer);
+
+        return completeCheckIn(booking, detail, actor);
+    }
+
+    @Override
+    public AiFaceReadinessResponse checkFaceReadiness(
+            MultipartFile selfieImage,
+            String actorEmail) {
+        validateSelfie(selfieImage);
+
+        User actor = userRepository.findByEmail(actorEmail)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
+        if (!"manager".equalsIgnoreCase(actor.getRole().name())) {
+            throw new RuntimeException("Chỉ Manager mới được kiểm tra camera FaceID");
+        }
+
+        MultipartBodyBuilder bodyBuilder = new MultipartBodyBuilder();
+        addFaceImagePart(
+                bodyBuilder,
+                "selfie_image",
+                selfieImage,
+                "face-readiness.jpg");
+
+        try {
+            AiFaceReadinessResponse response = webClient.post()
+                    .uri(aiFaceReadinessUrl)
+                    .contentType(MediaType.MULTIPART_FORM_DATA)
+                    .body(BodyInserters.fromMultipartData(bodyBuilder.build()))
+                    .retrieve()
+                    .bodyToMono(AiFaceReadinessResponse.class)
+                    .timeout(Duration.ofSeconds(30))
+                    .block();
+
+            if (response == null) {
+                throw new RuntimeException("Face readiness API trả về phản hồi rỗng");
+            }
+            return response;
+        } catch (WebClientResponseException ex) {
+            throw new RuntimeException(
+                    "Face readiness API lỗi: " + ex.getResponseBodyAsString(),
+                    ex);
+        } catch (RuntimeException ex) {
+            throw ex;
+        } catch (Exception ex) {
+            throw new RuntimeException(
+                    "Không thể kết nối tới dịch vụ kiểm tra camera FaceID",
+                    ex);
+        }
+    }
+
     private BookingResponse completeCheckIn(
             Booking booking,
             Bookingdetail detail,
-            User checkedInBy
-    ) {
+            User checkedInBy) {
         int quantity = detail.getQuantity() == null
                 ? DEFAULT_SINGLE_BOOKING_QUANTITY
                 : detail.getQuantity();
@@ -514,10 +798,9 @@ public class BookingServiceImpl implements BookingService {
             throw new RuntimeException("Số lượng phòng của booking không hợp lệ");
         }
 
-        List<BookingRoomAccess> existingAccesses =
-                bookingRoomAccessRepository.findByBookingid_IdOrderByRoomid_RoomnumberAsc(
-                        booking.getId()
-                );
+        List<BookingRoomAccess> existingAccesses = bookingRoomAccessRepository
+                .findByBookingid_IdOrderByRoomid_RoomnumberAsc(
+                        booking.getId());
         if (!existingAccesses.isEmpty()) {
             throw new RuntimeException("Booking này đã được cấp quyền truy cập phòng");
         }
@@ -525,8 +808,7 @@ public class BookingServiceImpl implements BookingService {
         List<Room> availableRooms = roomRepository
                 .findByRoomtypeid_IdAndStatusOrderByRoomnumberAsc(
                         detail.getRoomtypeid().getId(),
-                        AVAILABLE_ROOM_STATUS
-                );
+                        AVAILABLE_ROOM_STATUS);
 
         List<Room> selectedRooms = new ArrayList<>();
         if (detail.getRoomid() != null) {
@@ -552,8 +834,7 @@ public class BookingServiceImpl implements BookingService {
         if (selectedRooms.size() < quantity) {
             throw new RuntimeException(
                     "Không đủ phòng sẵn sàng để nhận phòng. Cần "
-                            + quantity + " phòng nhưng chỉ có " + selectedRooms.size()
-            );
+                            + quantity + " phòng nhưng chỉ có " + selectedRooms.size());
         }
 
         Instant now = Instant.now();
@@ -577,6 +858,9 @@ public class BookingServiceImpl implements BookingService {
 
             room.setStatus(ROOM_STATUS_OCCUPIED);
             room.setUpdatedat(now);
+
+            // Broadcast room status change via WebSocket
+            webSocketService.broadcastRoomStatus(room.getId(), room.getRoomnumber(), ROOM_STATUS_OCCUPIED);
         }
 
         BookingRoomAccess primaryAccess = roomAccesses.get(0);
@@ -588,6 +872,7 @@ public class BookingServiceImpl implements BookingService {
         detail.setActualcheckin(now);
         detail.setCheckedinat(now);
         detail.setCheckedinby(checkedInBy);
+        clearQrToken(detail, now);
         detail.setUpdatedat(now);
 
         booking.setStatus("Checked-in");
@@ -607,18 +892,26 @@ public class BookingServiceImpl implements BookingService {
         User staff = userRepository.findByEmail(staffEmail)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
 
-        if (!"receptionist".equalsIgnoreCase(staff.getRole().name()) && !"manager".equalsIgnoreCase(staff.getRole().name())) {
+        if (!"receptionist".equalsIgnoreCase(staff.getRole().name())
+                && !"manager".equalsIgnoreCase(staff.getRole().name())) {
             throw new RuntimeException("Bạn không có quyền thực hiện chức năng này");
         }
 
         Booking booking = bookingRepository.findById(bookingId)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn đặt phòng"));
 
-        if (!"Checked-in".equalsIgnoreCase(booking.getStatus()) && !"Checked In".equalsIgnoreCase(booking.getStatus())) {
+        if (!"Checked-in".equalsIgnoreCase(booking.getStatus())
+                && !"Checked In".equalsIgnoreCase(booking.getStatus())) {
             throw new RuntimeException("Đơn đặt phòng chưa được check-in");
         }
 
-        booking.setStatus("Checked-out");
+        BigDecimal dueAmount = booking.getFinalamount().subtract(booking.getPaidamount());
+        if (dueAmount.compareTo(BigDecimal.ZERO) > 0) {
+            throw new RuntimeException("Đơn đặt phòng chưa được thanh toán đầy đủ. Quý khách cần thanh toán thêm "
+                    + formatCurrency(dueAmount) + " trước khi trả phòng.");
+        }
+
+        booking.setStatus("Completed");
         booking.setUpdatedat(Instant.now());
         bookingRepository.save(booking);
 
@@ -628,16 +921,19 @@ public class BookingServiceImpl implements BookingService {
         detail.setActualcheckout(now);
         detail.setCheckedoutat(now);
         detail.setCheckedoutby(staff);
-        List<BookingRoomAccess> roomAccesses =
-                bookingRoomAccessRepository.findByBookingid_IdOrderByRoomid_RoomnumberAsc(bookingId);
+        List<BookingRoomAccess> roomAccesses = bookingRoomAccessRepository
+                .findByBookingid_IdOrderByRoomid_RoomnumberAsc(bookingId);
         for (BookingRoomAccess access : roomAccesses) {
             Room room = access.getRoomid();
-            room.setStatus(AVAILABLE_ROOM_STATUS);
+            room.setStatus("Cleaning");
             room.setUpdatedat(now);
             access.setRoomkeyaccess(null);
             access.setRoomkeyexpiredat(now);
             access.setRoomkeystatus(ROOM_KEY_STATUS_EXPIRED);
             access.setUpdatedat(now);
+
+            // Broadcast room status change via WebSocket
+            webSocketService.broadcastRoomStatus(room.getId(), room.getRoomnumber(), "Cleaning");
         }
         if (!roomAccesses.isEmpty()) {
             roomRepository.saveAll(roomAccesses.stream()
@@ -653,9 +949,12 @@ public class BookingServiceImpl implements BookingService {
 
         if (roomAccesses.isEmpty() && detail.getRoomid() != null) {
             Room room = detail.getRoomid();
-            room.setStatus(AVAILABLE_ROOM_STATUS);
+            room.setStatus("Cleaning");
             room.setUpdatedat(now);
             roomRepository.save(room);
+
+            // Broadcast room status change via WebSocket
+            webSocketService.broadcastRoomStatus(room.getId(), room.getRoomnumber(), "Cleaning");
         }
         bookingdetailRepository.save(detail);
 
@@ -665,20 +964,32 @@ public class BookingServiceImpl implements BookingService {
     private AiFaceVerificationResponse callFaceVerificationService(
             String registeredEmbedding,
             MultipartFile selfieImage,
-            MultipartFile leftImage,
-            MultipartFile rightImage,
-            MultipartFile upImage,
-            MultipartFile downImage
-    ) {
+            MultipartFile challengeImage,
+            MultipartFile challengeImage2,
+            MultipartFile challengeImage3,
+            String challengeDirection) {
         MultipartBodyBuilder bodyBuilder = new MultipartBodyBuilder();
         bodyBuilder.part("registered_embedding", registeredEmbedding)
                 .contentType(MediaType.TEXT_PLAIN);
 
         addFaceImagePart(bodyBuilder, "selfie_image", selfieImage, "face-center.jpg");
-        addFaceImagePart(bodyBuilder, "left_image", leftImage, "face-left.jpg");
-        addFaceImagePart(bodyBuilder, "right_image", rightImage, "face-right.jpg");
-        addFaceImagePart(bodyBuilder, "up_image", upImage, "face-up.jpg");
-        addFaceImagePart(bodyBuilder, "down_image", downImage, "face-down.jpg");
+        addFaceImagePart(
+                bodyBuilder,
+                "challenge_image",
+                challengeImage,
+                "face-challenge.jpg");
+        addFaceImagePart(
+                bodyBuilder,
+                "challenge_image_2",
+                challengeImage2,
+                "face-challenge-2.jpg");
+        addFaceImagePart(
+                bodyBuilder,
+                "challenge_image_3",
+                challengeImage3,
+                "face-challenge-3.jpg");
+        bodyBuilder.part("challenge_direction", challengeDirection)
+                .contentType(MediaType.TEXT_PLAIN);
 
         try {
             AiFaceVerificationResponse response = webClient.post()
@@ -697,15 +1008,13 @@ public class BookingServiceImpl implements BookingService {
         } catch (WebClientResponseException ex) {
             throw new RuntimeException(
                     "Face API lỗi: " + ex.getResponseBodyAsString(),
-                    ex
-            );
+                    ex);
         } catch (RuntimeException ex) {
             throw ex;
         } catch (Exception ex) {
             throw new RuntimeException(
                     "Không thể kết nối tới dịch vụ xác minh khuôn mặt",
-                    ex
-            );
+                    ex);
         }
     }
 
@@ -713,8 +1022,7 @@ public class BookingServiceImpl implements BookingService {
             MultipartBodyBuilder bodyBuilder,
             String partName,
             MultipartFile image,
-            String fallbackFilename
-    ) {
+            String fallbackFilename) {
         Resource resource = image.getResource();
         MediaType contentType = MediaType.APPLICATION_OCTET_STREAM;
         if (image.getContentType() != null && !image.getContentType().isBlank()) {
@@ -740,7 +1048,7 @@ public class BookingServiceImpl implements BookingService {
         }
     }
 
-    private void validateFaceCheckInDate(Bookingdetail detail) {
+    private void validateCheckInDateWindow(Bookingdetail detail) {
         LocalDate today = LocalDate.now(HOTEL_ZONE);
         LocalDate checkInDate = toLocalDate(detail.getExpectedcheckin());
         LocalDate checkOutDate = toLocalDate(detail.getExpectedcheckout());
@@ -751,6 +1059,149 @@ public class BookingServiceImpl implements BookingService {
         if (!today.isBefore(checkOutDate)) {
             throw new RuntimeException("Đơn đặt phòng đã quá thời gian nhận phòng");
         }
+    }
+
+    private void validateFaceIdBookingEligibility(User customer) {
+        boolean ekycVerified = ekycProfileRepository.existsByUseridAndStatus(
+                customer,
+                "Verified"
+        );
+        boolean faceRegistered = faceembeddingRepository
+                .findEmbeddingTextByUserId(customer.getId())
+                .filter(embedding -> !embedding.isBlank())
+                .isPresent();
+
+        if (!ekycVerified || !faceRegistered) {
+            throw new RuntimeException(
+                    "Ban phai hoan thanh dang ky eKYC va khuon mat truoc khi chon check-in bang FaceID"
+            );
+        }
+    }
+
+    private void validateQrCodeBookingEligibility(User customer) {
+        if (!ekycProfileRepository.existsByUseridAndStatus(customer, "Verified")) {
+            throw new RuntimeException(
+                    "Ban phai hoan thanh dang ky eKYC truoc khi chon check-in bang QR Code"
+            );
+        }
+    }
+
+    private void validateQrBookingForCheckIn(
+            Booking booking,
+            Bookingdetail detail,
+            User customer
+    ) {
+        if (!isQrCodeMethod(booking.getCheckinmethod())) {
+            throw new RuntimeException("Don dat phong nay khong su dung phuong thuc QR Code");
+        }
+        validateCheckInEligibleStatus(booking);
+        validateBookingNotCheckedIn(booking, detail);
+        validateCheckInDateWindow(detail);
+        validateQrCodeBookingEligibility(customer);
+    }
+
+    private void validateCheckInEligibleStatus(Booking booking) {
+        if (!"Confirmed".equalsIgnoreCase(booking.getStatus()) &&
+                !"Partially Paid".equalsIgnoreCase(booking.getStatus()) &&
+                !"Paid".equalsIgnoreCase(booking.getStatus())) {
+            throw new RuntimeException("Don dat phong khong o trang thai co the nhan phong");
+        }
+    }
+
+    private void validateBookingNotCheckedIn(Booking booking, Bookingdetail detail) {
+        if (detail.getActualcheckin() != null
+                || "Checked-in".equalsIgnoreCase(booking.getStatus())
+                || "Checked In".equalsIgnoreCase(booking.getStatus())) {
+            throw new RuntimeException("Booking nay da duoc check-in");
+        }
+    }
+
+    private void validateQrCheckInActor(User actor, User customer) {
+        boolean isOwner = actor.getId() != null && actor.getId().equals(customer.getId());
+        if (!isOwner && !isStaffCheckInActor(actor)) {
+            throw new RuntimeException("Ban khong co quyen check-in booking nay bang QR Code");
+        }
+    }
+
+    private boolean isStaffCheckInActor(User actor) {
+        return hasRole(actor, "receptionist") || hasRole(actor, "manager");
+    }
+
+    private boolean hasRole(User user, String role) {
+        return user != null
+                && user.getRole() != null
+                && role.equalsIgnoreCase(user.getRole().name());
+    }
+
+    private Instant calculateQrTokenExpiry(Instant generatedAt, Bookingdetail detail) {
+        long ttlMinutes = Math.max(1, qrTokenTtlMinutes);
+        Instant expiresAt = generatedAt.plus(Duration.ofMinutes(ttlMinutes));
+        Instant checkoutExpiry = toCheckoutExpiry(detail.getExpectedcheckout());
+        if (expiresAt.isAfter(checkoutExpiry)) {
+            expiresAt = checkoutExpiry;
+        }
+        if (!expiresAt.isAfter(generatedAt)) {
+            throw new RuntimeException("Khong the tao QR token cho booking da qua thoi gian nhan phong");
+        }
+        return expiresAt;
+    }
+
+    private String generateUniqueQrToken() {
+        for (int attempt = 0; attempt < 10; attempt++) {
+            String token = generateQrToken();
+            if (!bookingdetailRepository.existsByQrcodevalue(token)) {
+                return token;
+            }
+        }
+        throw new RuntimeException("Khong the tao QR token check-in");
+    }
+
+    private String generateQrToken() {
+        byte[] randomBytes = new byte[QR_TOKEN_RANDOM_BYTES];
+        SECURE_RANDOM.nextBytes(randomBytes);
+        return Base64.getUrlEncoder().withoutPadding().encodeToString(randomBytes);
+    }
+
+    private boolean hasActiveQrToken(Bookingdetail detail, Instant now) {
+        return detail.getQrcodevalue() != null
+                && !detail.getQrcodevalue().isBlank()
+                && detail.getQrcodeexpiredat() != null
+                && now.isBefore(detail.getQrcodeexpiredat());
+    }
+
+    private void sendQrCheckInEmailSafely(
+            User customer,
+            Booking booking,
+            Bookingdetail detail,
+            String token,
+            Instant expiresAt
+    ) {
+        if (customer == null || customer.getEmail() == null || customer.getEmail().isBlank()) {
+            return;
+        }
+
+        try {
+            Roomtype roomtype = detail.getRoomtypeid();
+            emailService.sendQrCheckInEmail(
+                    customer.getEmail(),
+                    customer.getFullname(),
+                    booking.getBookingreference(),
+                    roomtype != null ? roomtype.getName() : null,
+                    detail.getExpectedcheckin() != null ? toLocalDate(detail.getExpectedcheckin()) : null,
+                    detail.getExpectedcheckout() != null ? toLocalDate(detail.getExpectedcheckout()) : null,
+                    token,
+                    expiresAt
+            );
+        } catch (RuntimeException ex) {
+            log.warn("Failed to send QR check-in email for booking {}", booking.getId(), ex);
+        }
+    }
+
+    private void clearQrToken(Bookingdetail detail, Instant now) {
+        detail.setQrcodevalue(null);
+        detail.setQrcodegeneratedat(null);
+        detail.setQrcodeexpiredat(null);
+        detail.setUpdatedat(now);
     }
 
     private String generateRoomPassword() {
@@ -775,14 +1226,18 @@ public class BookingServiceImpl implements BookingService {
     private List<RoomAccessResponse> mapRoomAccesses(
             Booking booking,
             Bookingdetail detail,
-            boolean includeRoomPassword
-    ) {
-        List<BookingRoomAccess> accesses =
-                bookingRoomAccessRepository.findByBookingid_IdOrderByRoomid_RoomnumberAsc(
-                        booking.getId()
-                );
+            boolean includeRoomPassword) {
+        List<BookingRoomAccess> accesses = bookingRoomAccessRepository.findByBookingid_IdOrderByRoomid_RoomnumberAsc(
+                booking.getId());
+        return mapRoomAccesses(booking, detail, accesses, includeRoomPassword);
+    }
 
-        if (!accesses.isEmpty()) {
+    private List<RoomAccessResponse> mapRoomAccesses(
+            Booking booking,
+            Bookingdetail detail,
+            List<BookingRoomAccess> accesses,
+            boolean includeRoomPassword) {
+        if (accesses != null && !accesses.isEmpty()) {
             return accesses.stream()
                     .map(access -> {
                         boolean usable = includeRoomPassword
@@ -800,26 +1255,25 @@ public class BookingServiceImpl implements BookingService {
                     .toList();
         }
 
-        if (detail.getRoomid() == null) {
-            return List.of();
+        if (detail != null && detail.getRoomid() != null) {
+            Room room = detail.getRoomid();
+            boolean usable = includeRoomPassword && isRoomKeyUsable(booking, detail);
+            return List.of(RoomAccessResponse.builder()
+                    .roomId(room.getId())
+                    .roomNumber(room.getRoomnumber())
+                    .floorNumber(room.getFloornumber())
+                    .roomPassword(usable ? detail.getRoomkeyaccess() : null)
+                    .roomKeyStatus(detail.getRoomkeystatus())
+                    .roomKeyExpiresAt(detail.getRoomkeyexpiredat())
+                    .build());
         }
 
-        Room room = detail.getRoomid();
-        boolean usable = includeRoomPassword && isRoomKeyUsable(booking, detail);
-        return List.of(RoomAccessResponse.builder()
-                .roomId(room.getId())
-                .roomNumber(room.getRoomnumber())
-                .floorNumber(room.getFloornumber())
-                .roomPassword(usable ? detail.getRoomkeyaccess() : null)
-                .roomKeyStatus(detail.getRoomkeystatus())
-                .roomKeyExpiresAt(detail.getRoomkeyexpiredat())
-                .build());
+        return List.of();
     }
 
     private boolean isRoomAccessUsable(
             Booking booking,
-            BookingRoomAccess access
-    ) {
+            BookingRoomAccess access) {
         return ("Checked-in".equalsIgnoreCase(booking.getStatus())
                 || "Checked In".equalsIgnoreCase(booking.getStatus()))
                 && ROOM_KEY_STATUS_ACTIVE.equalsIgnoreCase(access.getRoomkeystatus())
@@ -847,7 +1301,8 @@ public class BookingServiceImpl implements BookingService {
         User staff = userRepository.findByEmail(staffEmail)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
 
-        if (!"receptionist".equalsIgnoreCase(staff.getRole().name()) && !"manager".equalsIgnoreCase(staff.getRole().name())) {
+        if (!"receptionist".equalsIgnoreCase(staff.getRole().name())
+                && !"manager".equalsIgnoreCase(staff.getRole().name())) {
             throw new RuntimeException("Bạn không có quyền thực hiện chức năng này");
         }
 
@@ -876,7 +1331,293 @@ public class BookingServiceImpl implements BookingService {
                 || "FaceID".equalsIgnoreCase(checkInMethod)) {
             return "FaceID";
         }
+        if ("QR".equalsIgnoreCase(checkInMethod)
+                || "QRCode".equalsIgnoreCase(checkInMethod)
+                || "QR Code".equalsIgnoreCase(checkInMethod)) {
+            return "QR Code";
+        }
         return checkInMethod;
+    }
+
+    @Override
+    @Transactional
+    public BookingResponse createWalkInBooking(WalkInBookingRequest request, String staffEmail) {
+        User staff = userRepository.findByEmail(staffEmail)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên"));
+
+        if (!"receptionist".equalsIgnoreCase(staff.getRole().name())
+                && !"manager".equalsIgnoreCase(staff.getRole().name())) {
+            throw new RuntimeException("Bạn không có quyền thực hiện chức năng này");
+        }
+
+        validateDates(request.getCheckInDate(), request.getCheckOutDate());
+        validateGuestCounts(request.getNumberOfAdults(), request.getNumberOfChildren());
+
+        User customer = userRepository.findByEmail(request.getCustomerEmail()).orElse(null);
+        if (customer == null) {
+            customer = new User();
+            customer.setEmail(request.getCustomerEmail());
+            customer.setFullname(request.getCustomerFullname());
+            customer.setPhonenumber(request.getCustomerPhonenumber());
+            customer.setRole(Role.customer);
+            customer.setPasswordhash("");
+            customer.setStatus("Active");
+            customer.setCreatedat(Instant.now());
+            customer = userRepository.save(customer);
+        }
+
+        Roomtype roomtype = roomtypeRepository.findById(request.getRoomTypeId())
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy loại phòng"));
+
+        if (!"Active".equalsIgnoreCase(roomtype.getStatus())) {
+            throw new RuntimeException("Loại phòng hiện không hoạt động");
+        }
+
+        assertCapacity(roomtype, request.getQuantity(), request.getNumberOfAdults(), request.getNumberOfChildren());
+        assertAvailability(roomtype, request.getCheckInDate(), request.getCheckOutDate(), request.getQuantity());
+
+        Instant now = Instant.now();
+        long nights = ChronoUnit.DAYS.between(request.getCheckInDate(), request.getCheckOutDate());
+        BigDecimal totalAmount = roomtype.getBaseprice()
+                .multiply(BigDecimal.valueOf(request.getQuantity()))
+                .multiply(BigDecimal.valueOf(nights));
+
+        BigDecimal taxAmount = totalAmount.multiply(new BigDecimal("0.10")).setScale(2, RoundingMode.HALF_UP);
+        BigDecimal finalAmount = totalAmount.add(taxAmount).setScale(2, RoundingMode.HALF_UP);
+
+        Booking booking = new Booking();
+        booking.setUserid(customer);
+        booking.setBookingreference(generateBookingReference(now));
+        booking.setBookingtype("Walk-in");
+        booking.setCheckinmethod("Manual");
+        booking.setTotalamount(totalAmount);
+        booking.setPaidamount(BigDecimal.ZERO);
+        booking.setDepositamount(BigDecimal.ZERO);
+        booking.setDiscountamount(BigDecimal.ZERO);
+        booking.setTaxamount(taxAmount);
+        booking.setServicechargeamount(BigDecimal.ZERO);
+        booking.setFinalamount(finalAmount);
+        booking.setStatus("Confirmed");
+        booking.setSpecialrequests(request.getSpecialRequests());
+        booking.setCreatedat(now);
+        booking.setUpdatedat(now);
+        booking.setCreatedby(staff);
+
+        Booking savedBooking = bookingRepository.save(booking);
+
+        Bookingdetail detail = new Bookingdetail();
+        detail.setBookingid(savedBooking);
+        detail.setRoomtypeid(roomtype);
+        detail.setQuantity(request.getQuantity());
+        detail.setExpectedcheckin(toInstant(request.getCheckInDate()));
+        detail.setExpectedcheckout(toInstant(request.getCheckOutDate()));
+        detail.setPriceatbooking(roomtype.getBaseprice());
+        detail.setNumberofadults(request.getNumberOfAdults());
+        detail.setNumberofchildren(request.getNumberOfChildren());
+        detail.setStatus("Active");
+        detail.setCreatedat(now);
+        detail.setUpdatedat(now);
+
+        bookingdetailRepository.save(detail);
+
+        // Record upfront payment if any
+        if (request.getPaidAmount() != null && request.getPaidAmount().compareTo(BigDecimal.ZERO) > 0) {
+            Payment payment = new Payment();
+            payment.setBookingid(savedBooking);
+            payment.setAmount(request.getPaidAmount());
+            payment.setPaymentmethod(request.getPaymentMethod() != null ? request.getPaymentMethod() : "Cash");
+            payment.setPaymenttype("Booking Payment");
+            payment.setTransactioncode("WALKIN-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase());
+            payment.setStatus("Completed");
+            payment.setRefundedamount(BigDecimal.ZERO);
+            payment.setPaymentdate(now);
+            payment.setNotes("Walk-in payment recorded at creation.");
+            paymentRepository.save(payment);
+
+            savedBooking.setPaidamount(request.getPaidAmount());
+            if (savedBooking.getPaidamount().compareTo(savedBooking.getFinalamount()) >= 0) {
+                savedBooking.setStatus("Paid");
+            } else {
+                savedBooking.setStatus("Partially Paid");
+            }
+            bookingRepository.save(savedBooking);
+        }
+
+        // Perform immediate check-in for walk-in booking
+        return completeCheckIn(savedBooking, detail, staff);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public InvoiceResponse getInvoiceDetails(Integer bookingId, String actorEmail) {
+        Booking booking = bookingRepository.findById(bookingId)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn đặt phòng"));
+
+        User actor = userRepository.findByEmail(actorEmail)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy người dùng"));
+
+        boolean isStaff = "receptionist".equalsIgnoreCase(actor.getRole().name())
+                || "manager".equalsIgnoreCase(actor.getRole().name());
+
+        if (!isStaff && !actor.getId().equals(booking.getUserid().getId())) {
+            throw new RuntimeException("Bạn không có quyền xem hóa đơn này");
+        }
+
+        Bookingdetail detail = bookingdetailRepository.findByBookingid_Id(bookingId)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy chi tiết đặt phòng"));
+
+        List<BookingRoomAccess> roomAccesses = bookingRoomAccessRepository
+                .findByBookingid_IdOrderByRoomid_RoomnumberAsc(bookingId);
+        List<String> assignedRooms = new ArrayList<>();
+        if (!roomAccesses.isEmpty()) {
+            assignedRooms = roomAccesses.stream()
+                    .map(access -> access.getRoomid().getRoomnumber())
+                    .toList();
+        } else if (detail.getRoomid() != null) {
+            assignedRooms = List.of(detail.getRoomid().getRoomnumber());
+        }
+
+        List<Bookingservice> bookingservices = bookingserviceRepository.findByBookingid_Id(bookingId);
+        List<InvoiceResponse.ServiceChargeItem> serviceItems = bookingservices.stream()
+                .map(bs -> InvoiceResponse.ServiceChargeItem.builder()
+                        .usageId(bs.getId())
+                        .serviceName(bs.getNote() != null && !bs.getNote().isBlank() ? bs.getNote() : "Dịch vụ phụ thu")
+                        .quantity(bs.getQuantity())
+                        .unitPrice(bs.getUnitprice())
+                        .totalPrice(bs.getTotalprice())
+                        .implementedAt(bs.getImplementedat())
+                        .note(bs.getNote())
+                        .build())
+                .toList();
+
+        BigDecimal serviceTotal = bookingservices.stream()
+                .map(Bookingservice::getTotalprice)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        List<Payment> payments = paymentRepository.findByBookingid_Id(bookingId);
+        List<InvoiceResponse.PaymentItem> paymentItems = payments.stream()
+                .map(p -> InvoiceResponse.PaymentItem.builder()
+                        .paymentId(p.getId())
+                        .amount(p.getAmount())
+                        .paymentMethod(p.getPaymentmethod())
+                        .paymentType(p.getPaymenttype())
+                        .transactionCode(p.getTransactioncode())
+                        .status(p.getStatus())
+                        .refundedAmount(p.getRefundedamount())
+                        .paymentDate(p.getPaymentdate())
+                        .notes(p.getNotes())
+                        .build())
+                .toList();
+
+        long nights = ChronoUnit.DAYS.between(toLocalDate(detail.getExpectedcheckin()),
+                toLocalDate(detail.getExpectedcheckout()));
+        BigDecimal roomRate = detail.getPriceatbooking();
+        BigDecimal roomTotal = roomRate.multiply(BigDecimal.valueOf(detail.getQuantity()))
+                .multiply(BigDecimal.valueOf(nights));
+        BigDecimal taxAmount = booking.getTaxamount();
+        BigDecimal discountAmount = booking.getDiscountamount();
+        BigDecimal finalAmount = booking.getFinalamount();
+        BigDecimal paidAmount = booking.getPaidamount();
+        BigDecimal dueAmount = finalAmount.subtract(paidAmount);
+
+        return InvoiceResponse.builder()
+                .bookingId(booking.getId())
+                .bookingReference(booking.getBookingreference())
+                .bookingType(booking.getBookingtype())
+                .customerName(booking.getUserid().getFullname())
+                .customerEmail(booking.getUserid().getEmail())
+                .customerPhone(booking.getUserid().getPhonenumber())
+                .checkInDate(toLocalDate(detail.getExpectedcheckin()))
+                .checkOutDate(toLocalDate(detail.getExpectedcheckout()))
+                .nights(nights)
+                .roomTypeName(detail.getRoomtypeid().getName())
+                .quantity(detail.getQuantity())
+                .assignedRooms(assignedRooms)
+                .roomRate(roomRate)
+                .roomTotal(roomTotal)
+                .services(serviceItems)
+                .serviceTotal(serviceTotal)
+                .taxAmount(taxAmount)
+                .discountAmount(discountAmount)
+                .finalAmount(finalAmount)
+                .paidAmount(paidAmount)
+                .dueAmount(dueAmount)
+                .payments(paymentItems)
+                .build();
+    }
+
+    @Override
+    @Transactional
+    public void addServiceToBooking(Integer bookingId, AddServiceRequest request, String staffEmail) {
+        User staff = userRepository.findByEmail(staffEmail)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên"));
+
+        if (!"receptionist".equalsIgnoreCase(staff.getRole().name())
+                && !"manager".equalsIgnoreCase(staff.getRole().name())) {
+            throw new RuntimeException("Bạn không có quyền thực hiện chức năng này");
+        }
+
+        Booking booking = bookingRepository.findById(bookingId)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn đặt phòng"));
+
+        if ("Cancelled".equalsIgnoreCase(booking.getStatus())
+                || "Checked-out".equalsIgnoreCase(booking.getStatus())
+                || "Completed".equalsIgnoreCase(booking.getStatus())) {
+            throw new RuntimeException("Không thể thêm dịch vụ cho đơn đặt phòng ở trạng thái này");
+        }
+
+        com.example.hotelsmartbookingbackend.entity.Service service = serviceRepository.findById(request.getServiceId())
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy dịch vụ"));
+
+        if (Boolean.FALSE.equals(service.getIsactive())) {
+            throw new RuntimeException("Dịch vụ hiện không hoạt động");
+        }
+
+        BigDecimal unitPrice = service.getPrice();
+        BigDecimal totalPrice = unitPrice.multiply(BigDecimal.valueOf(request.getQuantity()));
+
+        Bookingservice usage = new Bookingservice();
+        usage.setBookingid(booking);
+        usage.setServiceid(service);
+        usage.setImplementedby(staff);
+        usage.setQuantity(request.getQuantity());
+        usage.setUnitprice(unitPrice);
+        usage.setTotalprice(totalPrice);
+        usage.setImplementedat(Instant.now());
+        usage.setNote(service.getName() + (request.getNote() != null && !request.getNote().isBlank()
+                ? " (" + request.getNote() + ")"
+                : ""));
+        usage.setStatus("Active");
+
+        bookingserviceRepository.save(usage);
+
+        // Update booking service charge, tax, and final amounts
+        BigDecimal serviceTax = totalPrice.multiply(new BigDecimal("0.10")).setScale(2, RoundingMode.HALF_UP);
+        booking.setServicechargeamount(booking.getServicechargeamount().add(totalPrice));
+        booking.setTaxamount(booking.getTaxamount().add(serviceTax));
+        booking.setFinalamount(booking.getFinalamount().add(totalPrice).add(serviceTax));
+
+        if (booking.getPaidamount().compareTo(booking.getFinalamount()) < 0) {
+            if ("Paid".equalsIgnoreCase(booking.getStatus())) {
+                booking.setStatus("Partially Paid");
+            }
+        }
+
+        booking.setUpdatedat(Instant.now());
+
+        bookingRepository.save(booking);
+    }
+
+    private boolean isFaceIdMethod(String checkInMethod) {
+        return "Face Recognition".equalsIgnoreCase(checkInMethod)
+                || "Face ID".equalsIgnoreCase(checkInMethod)
+                || "FaceID".equalsIgnoreCase(checkInMethod);
+    }
+
+    private boolean isQrCodeMethod(String checkInMethod) {
+        return "QR".equalsIgnoreCase(checkInMethod)
+                || "QRCode".equalsIgnoreCase(checkInMethod)
+                || "QR Code".equalsIgnoreCase(checkInMethod);
     }
 
     @Override
@@ -885,54 +1626,80 @@ public class BookingServiceImpl implements BookingService {
         int page = criteria.getPage() != null ? criteria.getPage() : 0;
         int pageSize = criteria.getPageSize() != null ? criteria.getPageSize() : 10;
         String sortBy = criteria.getSortBy() != null ? criteria.getSortBy() : "createdat";
-        Sort.Direction direction = criteria.getSortDirection() != null && criteria.getSortDirection().equalsIgnoreCase("DESC") 
-            ? Sort.Direction.DESC : Sort.Direction.ASC;
-    
+        Sort.Direction direction = criteria.getSortDirection() != null
+                && criteria.getSortDirection().equalsIgnoreCase("DESC")
+                        ? Sort.Direction.DESC
+                        : Sort.Direction.ASC;
+
         Pageable pageable = PageRequest.of(page, pageSize, Sort.by(direction, sortBy));
-    
+
         Page<Booking> bookings = bookingRepository.findAll(new BookingSpecification(criteria), pageable);
-    
-        List<BookingHistoryResponse> content = bookings.getContent().stream()
-            .map(this::mapToBookingHistoryResponse)
-            .collect(Collectors.toList());
-    
+
+        List<Booking> bookingList = bookings.getContent();
+        List<Integer> bookingIds = bookingList.stream().map(Booking::getId).toList();
+
+        List<Bookingdetail> detailsList = bookingdetailRepository.findByBookingid_IdIn(bookingIds);
+        java.util.Map<Integer, Bookingdetail> detailsMap = new java.util.HashMap<>();
+        for (Bookingdetail detail : detailsList) {
+            if (detail.getBookingid() != null) {
+                detailsMap.put(detail.getBookingid().getId(), detail);
+            }
+        }
+
+        List<BookingRoomAccess> accessesList = bookingRoomAccessRepository.findByBookingid_IdIn(bookingIds);
+        java.util.Map<Integer, List<BookingRoomAccess>> accessesMap = new java.util.HashMap<>();
+        for (BookingRoomAccess access : accessesList) {
+            if (access.getBookingid() != null) {
+                accessesMap.computeIfAbsent(access.getBookingid().getId(), k -> new java.util.ArrayList<>())
+                        .add(access);
+            }
+        }
+
+        List<BookingHistoryResponse> content = new java.util.ArrayList<>();
+        for (Booking booking : bookingList) {
+            content.add(mapToBookingHistoryResponse(
+                    booking,
+                    detailsMap.get(booking.getId()),
+                    accessesMap.get(booking.getId())));
+        }
+
         return PageResponse.<BookingHistoryResponse>builder()
-            .content(content)
-            .page(bookings.getNumber())
-            .size(bookings.getSize())
-            .totalElements(bookings.getTotalElements())
-            .totalPages(bookings.getTotalPages())
-            .first(bookings.isFirst())
-            .last(bookings.isLast())
-            .build();
+                .content(content)
+                .page(bookings.getNumber())
+                .size(bookings.getSize())
+                .totalElements(bookings.getTotalElements())
+                .totalPages(bookings.getTotalPages())
+                .first(bookings.isFirst())
+                .last(bookings.isLast())
+                .build();
     }
 
     @Override
     @Transactional
     public BookingResponse updateBooking(Integer bookingId, UpdateBookingRequest request, String staffEmail) {
         Booking booking = bookingRepository.findById(bookingId)
-            .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn đặt phòng với ID: " + bookingId));
-    
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn đặt phòng với ID: " + bookingId));
+
         User staff = userRepository.findByEmail(staffEmail)
-            .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên"));
-    
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên"));
+
         if (booking.getStatus().equalsIgnoreCase("Cancelled") || booking.getStatus().equalsIgnoreCase("Checked Out")) {
             throw new RuntimeException("Không thể cập nhật đơn đặt phòng đã hủy hoặc đã trả phòng");
         }
-    
+
         booking.setSpecialrequests(request.getSpecialRequests());
-    
+
         if (request.getDiscountAmount() != null && request.getDiscountAmount().compareTo(BigDecimal.ZERO) > 0) {
-           booking.setDiscountamount(request.getDiscountAmount());
-           BigDecimal newFinalAmount = booking.getTotalamount()
-               .subtract(request.getDiscountAmount())
-               .subtract(booking.getTaxamount());
-           booking.setFinalamount(newFinalAmount);
+            booking.setDiscountamount(request.getDiscountAmount());
+            BigDecimal newFinalAmount = booking.getTotalamount()
+                    .subtract(request.getDiscountAmount())
+                    .subtract(booking.getTaxamount());
+            booking.setFinalamount(newFinalAmount);
         }
-    
+
         booking.setUpdatedat(Instant.now());
         Booking updatedBooking = bookingRepository.save(booking);
-    
+
         return mapToBookingResponse(updatedBooking);
     }
 
@@ -940,19 +1707,19 @@ public class BookingServiceImpl implements BookingService {
     @Transactional
     public BookingResponse cancelBooking(Integer bookingId, CancelBookingRequest request, String staffEmail) {
         Booking booking = bookingRepository.findById(bookingId)
-            .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn đặt phòng với ID: " + bookingId));
-    
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy đơn đặt phòng với ID: " + bookingId));
+
         User staff = userRepository.findByEmail(staffEmail)
-            .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên"));
-    
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy nhân viên"));
+
         if (booking.getStatus().equalsIgnoreCase("Cancelled")) {
             throw new RuntimeException("Đơn đặt phòng này đã được hủy trước đó");
         }
-    
+
         if (booking.getStatus().equalsIgnoreCase("Checked Out")) {
             throw new RuntimeException("Không thể hủy đơn đặt phòng đã trả phòng");
         }
-    
+
         booking.setStatus("Cancelled");
         booking.setCancellationreason(request.getCancellationReason());
         booking.setCancelledat(Instant.now());
@@ -967,22 +1734,65 @@ public class BookingServiceImpl implements BookingService {
         detail.setStatus("Cancelled");
         detail.setUpdatedat(Instant.now());
         bookingdetailRepository.save(detail);
-    
+
         Booking cancelledBooking = bookingRepository.save(booking);
-    
+
         return mapToBookingResponse(cancelledBooking);
     }
 
     private BookingHistoryResponse mapToBookingHistoryResponse(Booking booking) {
-        return BookingHistoryResponse.builder()
+        Bookingdetail detail = bookingdetailRepository.findByBookingid_Id(booking.getId()).orElse(null);
+        return mapToBookingHistoryResponse(booking, detail, null);
+    }
+
+    private BookingHistoryResponse mapToBookingHistoryResponse(Booking booking, Bookingdetail detail) {
+        return mapToBookingHistoryResponse(booking, detail, null);
+    }
+
+    private BookingHistoryResponse mapToBookingHistoryResponse(Booking booking, Bookingdetail detail,
+            List<BookingRoomAccess> accesses) {
+        BookingHistoryResponse.BookingHistoryResponseBuilder builder = BookingHistoryResponse.builder()
                 .bookingId(booking.getId())
                 .bookingNumber(booking.getBookingreference())
                 .bookingDate(booking.getCreatedat())
                 .status(booking.getStatus())
                 .checkInMethod(booking.getCheckinmethod())
                 .totalAmount(booking.getTotalamount())
-                .build();
+                .paidAmount(booking.getPaidamount())
+                .depositAmount(booking.getDepositamount())
+                .discountAmount(booking.getDiscountamount())
+                .taxAmount(booking.getTaxamount())
+                .serviceChargeAmount(booking.getServicechargeamount())
+                .finalAmount(booking.getFinalamount())
+                .guestName(booking.getUserid() != null ? booking.getUserid().getFullname() : "Khách hàng Elysian")
+                .guestEmail(booking.getUserid() != null ? booking.getUserid().getEmail() : "");
+
+        if (detail != null) {
+            Roomtype roomtype = detail.getRoomtypeid();
+            Room assignedRoom = detail.getRoomid();
+            LocalDate checkInDate = toLocalDate(detail.getExpectedcheckin());
+            LocalDate checkOutDate = toLocalDate(detail.getExpectedcheckout());
+
+            builder.roomTypeId(roomtype != null ? roomtype.getId() : null)
+                    .roomType(roomtype != null ? roomtype.getName() : null)
+                    .quantity(detail.getQuantity())
+                    .numberOfAdults(detail.getNumberofadults())
+                    .numberOfChildren(detail.getNumberofchildren())
+                    .checkInDate(checkInDate)
+                    .checkOutDate(checkOutDate)
+                    .nights(ChronoUnit.DAYS.between(checkInDate, checkOutDate))
+                    .actualCheckIn(detail.getActualcheckin())
+                    .actualCheckOut(detail.getActualcheckout())
+                    .roomNumber(assignedRoom != null ? assignedRoom.getRoomnumber() : null)
+                    .roomPassword(isRoomKeyUsable(booking, detail) ? detail.getRoomkeyaccess() : null)
+                    .roomKeyStatus(detail.getRoomkeystatus())
+                    .roomKeyExpiresAt(detail.getRoomkeyexpiredat())
+                    .roomAccesses(mapRoomAccesses(booking, detail, accesses, true));
+        }
+
+        return builder.build();
     }
+
     private BookingResponse mapToBookingResponse(Booking booking) {
         return BookingResponse.builder()
                 .bookingId(booking.getId())
@@ -996,5 +1806,12 @@ public class BookingServiceImpl implements BookingService {
                 .specialRequests(booking.getSpecialrequests())
                 .createdAt(booking.getCreatedat())
                 .build();
+    }
+
+    private String formatCurrency(BigDecimal amount) {
+        if (amount == null) {
+            return "0 VND";
+        }
+        return String.format("%,.0f VND", amount);
     }
 }
